services-networking/custom-po-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: custom-pod
spec:
  serviceAccountName: custom-pod
  containers:
  - image: nginx
    name: custom-pod
