services-networking/endpoints.yaml
apiVersion: v1
kind: Endpoints 
metadata:
  name: simple-service
subsets:
  - addresses:
      - ip: 10.244.1.12
    ports: 
      - port: 80
