services-networking/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
   type: LoadBalancer
   selector:
      app: backend
   ports:
   -  port: 80
      targetPort: 80
