services-networking/serviceCluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
   type: ClusterIP
   selector:
      app: backend
   ports:
   -  port: 80
      targetPort: 80
