services-networking/serviceNodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
   type: NodePort
   selector:
      app: backend
   ports:
   -  port: 80
      targetPort: 80
      nodePort: 30556
