services-networking/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-based-ingress
spec:
  rules:
   - http:
      paths:
      - backend:
          service:
            name: app-1-service
            port:
              number: 8080
        path: /app-1
        pathType: Exact 
      - backend:
          service:
            name: app-2-service
            port:
              number: 8080
        path: /app-2
        pathType: Exact
