services-networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: second-ingress
spec:
  rules:
  - host: example.internal
    http:
      paths:
      - backend:
          service:
            name: example-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: kplabs.internal
    http:
      paths:
      - backend:
          service:
            name: kplabs-service
            port:
              number: 80
        path: /
        pathType: Prefix
